			SWI-Prolog ChangeLog
			====================

VERSION 3.3.0 (release-9)
=========================

  * ADDED: option syntax_errors to read_term.  Modified read_clause to
    use syntax_errors(dec10).

  * FIXED: Performance problem in registerAtom(), slowing down loading
    large files by a factor 10.  Caused by atom garbage collector.
    Reported by Luis Iraola Moreno.

  * FIXED: Avoid tracing $messages:prolog_message/3 after ?- trace.

  * FIXED: Force a linebreak after trace-output from trace/1.

VERSION 3.3.0 (release-8)
=========================

  * FIXED: Get tracer option `show context' working again.

  * FIXED: Module-handling in trace/1 (when using in module user).

  * FIXED: Printing messages from C.


VERSION 3.3.0 (release-7)
=========================

  * FIXED: Path-handling problem loading Quick Load Files from a different
    location then they were created.  Notably affects handling of
    discontiguous.

  * FIXED: File association in Windows to allow for additional arguments
    (notably stack-expansion).

  * MODIFIED: moved all internal messages to $messages:prolog_message/3
    rather then prolog:message/3, so all messages can be overrulled by
    adding clauses to prolog:message/3.

  * ADDED: Printing of goals by the trace through print_message/2 to allow
    for better tailuring by the user.

  * FIXED: Bug in call/1 on ground-calls and very specific control.

  * FIXED: Incorrect verification in SECURE-mode in pl-bags.c (maintenance
    only).

  * FIXED: Bug in handling logical-update view of assert/retract.  Thanks
    to Paolo Moura.


VERSION 3.3.0 (release-6)
=========================

  * FIXED: Problem in the debugger, leading to a possible crash on the exit
    port (very complicated conditions).

  * ISO: Added the Prolog flags unknown and debug.  Moved unknown/2, debug
    and nodebug predicates to new library(edinburgh).

  * ISO: Added current_predicate/1

  * ISO: clause/2 errors.
